0.7.5
-----
1. If rating from server is undefined, but TrackStat is installed, then show
   rating as 0.
2. Longpress on 'Browse' navigation button (whilst on 'Browse' view) will
   navigate to top (home).
3. Clear selection when go back/home.
4. Work-around item selection not updating until redraw if using large lists.
5. Allow playlist tracks to be selected.

0.7.4
-----
1. Remove 'itemAc' string next to pinned items.
2. Add menu button next to "My Music . LibraryName", allowing user to quickly
   change library.
3. Only collpase/expand section if click on arrow or title - not whole width.

0.7.3
-----
1. Limit strings in landscape now-playing to 80 characters.
2. Fix detection of search fields - command params needs __TAGGEDINPUT__. Fixes
   some radio search listing entries.
3. For non-server side categories, use "readdirectory" command to list music
   folders. This is *much* faster, but does not provide meta-data, and file
   types are manually filtered based upon extension.
4. Get ratings from status messages, but still only show if trackstat
   installed.
5. Show ratings in queue - desktop layout only.
6. Remove long-press on back button to go home, as this seems to be causing
   conflicts with selecting multiple items and playing.
7. Re-add option to control whether to sort favourites.
8. In mobile layout, switch to now-playing after playing a selection of items.

0.7.2
-----
 1. Fix clicking on 'Browse' bottom navigation button in mobile view causing
    browse view to navigate back when changing from 'Now Playing' / 'Queue'
 2. Better positioning of song details in portrait mobile now-playing.
 3. In sleep dialog, show all options in a clickable list.
 4. Disable "Show track information" from now-playing context menu if no
    track_id
 5. Fix Custom Browse "New Albums" and "New Artists", by only asking for a max
    of either the configured "New Music Limit" or 100 items.
 6. Indent "Information" dialog contents, to be consistent with settings dialogs.